css/styles.css
/*COLORS
#CAD8E7 - light blue
#FCCED0 - pink
#D9C2D7 - purple
#BDC987 - green
#FEAFA8- peach
#FCF788 - yellow
#FCDF92 - orange
#FDF0CD
*/

.img-placeholder {
  width: 100%;
}

.character-image {
  width: 50%;
}

.jumbotron {
  padding-top: 5%;
  background-image: url(../img/planet.png);
  background-size: 150px, 150px;
  background-repeat: no-repeat;
  background-position: 80%, 5%;
}

body, .jumbotron {
  background-color: #221826;
  color: #ecede6;
}

.container-fluid {
  padding: 0 5% 0 5%;
}

.character-stats {
 width: 100%
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  color: inherit;
  text-decoration: none;
}

.instructions {
  font-family: 'VT323', monospace;
  font-size: 30px;
}

.jumbotron, h1, h2 {
  text-align: center;
  color: #ecede6;
  font-family: 'Bahiana', cursive;
}

.game, .main-character-panel, .game-end, .game-row, .game-over {
  display: none;
}
.game {
  text-align: center;
}

.game-end-div {
  padding-top: 10%;
  float: right;
  position: absolute;
  left: 15%;
  top: 25%;
  text-align: center;
  background-color: #ffa100;
  height: 50%;
  width: 50%;
}

.end-btn {
  margin-top: 15%;
  height: 15%;
  width: 20%;
  background-color: #221826;
  font-family: 'Bahiana', cursive;
  font-size: 30px;
  border-radius: 4px;
  border: none;
}

.end-btn:hover {
  background-color: #423147;
}


.start-btn:hover {
  background-color: #423147;
  border-radius: 5px;
}

.btn, .form-control {
  width: 100%;
  margin-top: 10%;
  background-color: #221826;
  color: #f76d47;
  border: 1px solid #ecede6;
}

.btn:hover {
  color: #ecede6;
}

.start-btn {
  height: 200px;
  width: 100%;
  background-image: url(http://www.dezignwithaz.com/images/space-rocket-stick-ons.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  background-color: transparent;
  border: none;
}

.in-game-text{
  font-family: 'VT323', monospace;
  font-size: 20px;
  text-align: left;
}
.character-stats, .user-hp {
 font-family: 'VT323', monospace;
 font-size: 45px;
}
.character-row-top {
  border: 6px solid white;
  border-radius: 25px;
  height: 80%;
}
.game-chat-box {
  height: 500px;
  border: 6px solid white;
  border-radius: 25px;
  padding: 5px;
  /*overflow-y: scroll;*/
}

.in-game-text::-webkit-scrollbar {
  background-color: #221826;
}

.in-game-text {
  height:100%;
  overflow-y: scroll;
  flex:1;
  display:flex;
  flex-direction: column-reverse;
  padding-right: 40px;
}

.text-object {
  color: #c68631;
}

.text-enemy {
  color: #d4e51b;
}

.game-row {
  height: 800px;
}

#img1 {
  display: none;
}

#img2 {
  display: none;
}

